Les boutons NavBar et icons :D J'ai aussi mis le logo de l'appli :O Trop jolie!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_artiste_list">Artistes</string>
     <string name="title_news">News</string>
+    <string name="title_programmation">Programmation</string>
+    <string name="title_plan">Plan</string>
 </resources>
