FAQ en haut à droite de la tool bar <3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_news">News</string>
     <string name="title_programmation">Programmation</string>
     <string name="title_plan">Plan</string>
+    <string name="title_info">FAQ</string>
 </resources>
