--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_programmation">Programmation</string>
     <string name="title_plan">Plan</string>
     <string name="title_info">FAQ</string>
+    <string name="programmation"><u>PROGRAMME</u></string>
 </resources>
