VIEW FILTRE ARTISTE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_plan">Plan</string>
     <string name="title_info">FAQ</string>
     <string name="programmation"><u>PROGRAMME</u></string>
+    <string name="artist_sortAZ_text">A - Z</string>
 </resources>
